reparo do bug  alt="android>
       <img class="imgSkill" src="./img/skill/android.png" alt="android>
       <img class="imgSkill" src="./img/skill/android.png" alt="android">

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="Container Flex3">
             <div class="Cards Flex4">
                 <div class="CardSkill">
-                    <img class="imgSkill" src="./img/skill/android.png" alt="android>
+                    <img class="imgSkill" src="./img/skill/android.png" alt="android">
                     <h3>ANDROID</h3>
                 </div>
             </div>
