--- a/index.html
+++ b/index.html
@@ -46,23 +46,21 @@
                 <img src="./img/html5css3.jpg" alt="html5css3">
             </div>
             <div id="textoSobre">
-                <h2>Um Pouco Sobre Min</h2>
-                <p>Meu nome é Maurício Baron, tenho 45 anos, moro em Jundiaí-SP e estudo tecnologia desde 2006,
-                    conclui o curso superior de Ciências da Computação no ano de 2012 na faculdade Faccamp.
-                    Realizei um estágio na área de suporte técnico na prefeitura de Várzea Paulista, onde adquiri
-                    conhecimento em manutenção de computadores, instalação de sistemas e suporte em diversos softwares
-                    livres.
-                    Também trabalhei na área de suporte em outras empresas de software. Atualmente estou trabalhando
-                    como
-                    técnico em
-                    eletrônica, realizando reparos em equipamentos industriais. Tambem estou aprimorando os meus
-                    estudos em novas
-                    tecnologias, através de cursos, livros e documentações na internet. Desde então, venho dedicando boa
-                    parte do meu
-                    dia ao aprendizado e desenvolvimento em JAVA, C, PHP, HTML5, CSS3 e outras linguagens.
-                    Aqui neste portifólio você encontrará alguns projetos simples que venho desenvolvendo através de
-                    meus estudos e pesquisas.
-                </p>
+             <h2>   Um Pouco Sobre Mim </h2>h2
+                        <p>Meu nome é Maurício Baron, tenho 45 anos, moro em Jundiaí-SP e 
+                        estudo tecnologia desde 2006. Concluí o curso superior em Ciências da 
+                        Computação no ano de 2012 na faculdade Faccamp.
+                        Realizei um estágio na área de suporte técnico na Prefeitura de Várzea Paulista, 
+                        onde adquiri conhecimento em manutenção de computadores, instalação de sistemas e 
+                        suporte em diversos softwares livres. Também trabalhei na área de suporte em outras 
+                        empresas de software. Atualmente, estou trabalhando como técnico em eletrônica, realizando 
+                        reparos em equipamentos industriais. Além disso, estou aprimorando meus estudos em novas 
+                        tecnologias por meio de cursos, livros e documentações na internet. Desde então, 
+                        venho dedicando boa parte do meu dia ao aprendizado e desenvolvimento em Java, C, PHP, HTML5,
+                        CSS3 e outras linguagens.
+                        Neste portfólio, você encontrará alguns projetos simples que venho desenvolvendo através dos 
+                        meus estudos e pesquisas.
+                        </p>
             </div>
         </div>
     </section>
