--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <img src="./img/html5css3.jpg" alt="html5css3">
             </div>
             <div id="textoSobre">
-             <h2>   Um Pouco Sobre Mim </h2>h2
+             <h2>   Um Pouco Sobre Mim </h2>
                         <p>Meu nome é Maurício Baron, tenho 45 anos, moro em Jundiaí-SP e 
                         estudo tecnologia desde 2006. Concluí o curso superior em Ciências da 
                         Computação no ano de 2012 na faculdade Faccamp.
