--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
             <div id="textoSobre">
              <h2>   Um Pouco Sobre Mim </h2>
-                        <p>Meu nome é Maurício Baron, tenho 45 anos, moro em Jundiaí-SP e 
+                        <p>Meu nome é Maurício Baron,
                         estudo tecnologia desde 2006. Concluí o curso superior em Ciências da 
                         Computação no ano de 2012 na faculdade Faccamp.
                         Realizei um estágio na área de suporte técnico na Prefeitura de Várzea Paulista, 
